exercise5/condor/921.0-error.txt
  File "Exercise5.py", line 47
    print X_train.[0]
                  ^
SyntaxError: invalid syntax
